--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
   <link rel="canonical" href="https://khotwastudentcouncil.com/about.html"/>
   <meta name="robots" content="index,follow"/>
 
+  <!-- يدعم الثيمين للمتصفحات -->
+  <meta name="color-scheme" content="light dark"/>
+
   <!-- OG/Twitter -->
   <meta property="og:type" content="website"/>
   <meta property="og:site_name" content="Khotwa Student Council"/>
@@ -36,33 +39,41 @@
     :root{--primary:#1e40af;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
     *{box-sizing:border-box}
     html,body{height:100%}
-    body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
+    body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#0a0f1a}
     a{color:inherit;text-decoration:none} a:visited{color:inherit}
     .container{width:min(1120px,92%);margin-inline:auto}
 
     /* وصولية */
-    :where(a,button,[role="button"],input,select,textarea):focus-visible{outline:3px solid #2563eb;outline-offset:3px;border-radius:8px}
-    .skip-link{position:absolute;inset-inline-start:1rem;inset-block-start:-100px;background:#fff;color:#000;padding:.6rem .9rem;border-radius:.5rem;box-shadow:0 2px 8px rgba(0,0,0,.15);z-index:1000}
+    :where(a,button,[role="button"],input,select,textarea):focus-visible{
+      outline:3px solid #2563eb;outline-offset:3px;border-radius:8px
+    }
+    .skip-link{
+      position:absolute;inset-inline-start:1rem;inset-block-start:-100px;
+      background:#fff;color:#000;padding:.6rem .9rem;border-radius:.5rem;
+      box-shadow:0 2px 8px rgba(0,0,0,.15);z-index:1000
+    }
     .skip-link:focus{inset-block-start:1rem}
 
     /* Navbar (مشترك) */
-    .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
+    .navbar{position:sticky;top:0;background:#0c1220;border-bottom:1px solid var(--ring);z-index:40}
     .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0;gap:.8rem;position:relative}
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
     .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
     .nav-links{display:flex;gap:1rem;align-items:center}
     .nav-links a{padding:.5rem .75rem;border-radius:10px}
-    .nav-links a:hover{background:var(--card)}
-    .lang-toggle{padding:.45rem .75rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
-    .menu-toggle{display:none;align-items:center;gap:.5rem;padding:.5rem .7rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
+    .nav-links a[aria-current="page"]{background:rgba(255,255,255,.06)}
+    .nav-links a:hover{background:rgba(255,255,255,.08)}
+    .lang-toggle{padding:.45rem .75rem;border:1px solid var(--ring);background:transparent;border-radius:10px;cursor:pointer;color:var(--text)}
+    .menu-toggle{display:none;align-items:center;gap:.5rem;padding:.5rem .7rem;border:1px solid var(--ring);background:transparent;border-radius:10px;cursor:pointer;color:var(--text)}
     .menu-toggle svg{width:20px;height:20px}
+
     @media (max-width:900px){
       .menu-toggle{display:inline-flex}
       .nav-links{
         position:absolute; inset-inline:0; top:calc(100% + 8px);
-        background:#fff; border:1px solid var(--ring); border-radius:12px;
+        background:#0c1220; border:1px solid var(--ring); border-radius:12px;
         display:grid; gap:.2rem; padding:.4rem;
-        box-shadow:0 12px 30px rgba(2,6,23,.10);
+        box-shadow:0 12px 30px rgba(2,6,23,.25);
         max-height:0; overflow:hidden; opacity:0; transform:scale(.98);
         transition:max-height .2s ease, opacity .2s ease, transform .2s ease, padding .2s ease;
       }
@@ -74,25 +85,22 @@
     .grid{display:grid;gap:1rem}
     .grid-2{grid-template-columns:repeat(2,1fr)}
     @media(max-width:980px){.grid-2{grid-template-columns:1fr}}
-    .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
+    .card{background:#0f172a;border:1px solid var(--ring);border-radius:16px;padding:1rem}
     .muted{color:var(--muted)}
     .members{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1rem;margin-top:2rem}
-    .member-card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem;text-align:center}
-    .member-card img{width:100%;height:220px;object-fit:cover;border-radius:12px;margin-bottom:.6rem}
-    footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
+    .member-card{background:#0f172a;border:1px solid var(--ring);border-radius:16px;padding:1rem;text-align:center}
+    .member-card img{width:100%;height:220px;object-fit:cover;border-radius:12px;margin-bottom:.6rem;background:#0b1220}
+    footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem;background:#0c1220;color:#e5e7eb}
     .foot{display:flex;justify-content:space-between;gap:1rem;align-items:center}
 
-    /* وضع ليلي تلقائي */
-    @media (prefers-color-scheme: dark){
-      :root{
-        --card:#0b1220; --ring:#1f2937;
-        --text:#e5e7eb; --muted:#9ca3af;
-      }
-      body{ background:#0a0f1a; color:var(--text); }
-      .navbar, footer{ background:#0c1220; border-color:var(--ring); }
-      .card,.member-card{ background:#0f172a; border-color:var(--ring); }
-      .nav-links a:hover{ background:#0f172a; }
-      .lang-toggle{ background:transparent; color:var(--text); }
+    /* وضع ليلي/نهاري تلقائي */
+    @media (prefers-color-scheme: light){
+      body{ background:#fff; }
+      .navbar, footer{ background:#fff; }
+      .card,.member-card{ background:#fff; }
+      .nav-links a[aria-current="page"]{background:var(--card)}
+      .nav-links a:hover{background:var(--card)}
+      .lang-toggle,.menu-toggle{background:#fff;color:#0f172a}
     }
 
     /* تقليل الحركة */
@@ -123,7 +131,8 @@
         <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
         <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
         <a href="/calendar.html"><span data-lang="ar">التقويم</span><span data-lang="en" hidden>Calendar</span></a>
-        <a href="/resources.html"><span data-lang="ar">ال%D9%85%D9%88%D8%A7%D8%B1%D8%AF</span><span data-lang="en" hidden>Resources</span></a>
+        <!-- تم إصلاح النص هنا -->
+        <a href="/resources.html"><span data-lang="ar">الموارد</span><span data-lang="en" hidden>Resources</span></a>
         <a href="/contact.html"><span data-lang="ar">تواصل</span><span data-lang="en" hidden>Contact</span></a>
         <button id="lang-toggle" class="lang-toggle" type="button">English</button>
       </div>
@@ -227,10 +236,9 @@
     // سنة الحقوق
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // منيو الموبايل + وصولية (aria-expanded) + إغلاق خارجي/ESC
+    // منيو الموبايل + وصولية
     const menuBtn = document.getElementById('menu-toggle');
     const primaryNav = document.getElementById('primary-nav');
-
     function setMenu(open){
       primaryNav.setAttribute('data-open', String(open));
       menuBtn.setAttribute('aria-expanded', String(open));
